tests/ui/view-types/syntax-errors.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/syntax-errors.rs:10:32
   |
LL |     fn not_a_field(&mut self.{ _ }, _: &mut Foo.{ _ }) {}
   |                                ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/syntax-errors.rs:10:51
   |
LL |     fn not_a_field(&mut self.{ _ }, _: &mut Foo.{ _ }) {}
   |                                                   ^ expected identifier, found reserved identifier

error: expected identifier, found keyword `where`
  --> $DIR/syntax-errors.rs:14:28
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ for }) {}
   |                            ^^^^^ expected identifier, found keyword
   |
help: escape `where` to use it as an identifier
   |
LL |     fn keyword(&mut self.{ r#where }, _: &mut Foo.{ for }) {}
   |                            ++

error: expected identifier, found keyword `for`
  --> $DIR/syntax-errors.rs:14:51
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ for }) {}
   |                                                   ^^^ expected identifier, found keyword
   |
help: escape `for` to use it as an identifier
   |
LL |     fn keyword(&mut self.{ where }, _: &mut Foo.{ r#for }) {}
   |                                                   ++

error: expected one of `,` or `}`, found `baz`
  --> $DIR/syntax-errors.rs:18:33
   |
LL |     fn no_comma(&mut self.{ bar baz }, _: &mut Foo.{ bar baz }) {}
   |                                -^^^ expected one of `,` or `}`
   |                                |
   |                                help: missing `,`

error: expected one of `,` or `}`, found `baz`
  --> $DIR/syntax-errors.rs:18:58
   |
LL |     fn no_comma(&mut self.{ bar baz }, _: &mut Foo.{ bar baz }) {}
   |                                                         -^^^ expected one of `,` or `}`
   |                                                         |
   |                                                         help: missing `,`

error: aborting due to 6 previous errors

